clean4u/src/main/java/org/example/clean4u/_core/errors/exception/Exception401.java
package org.example.clean4u._core.errors.exception;

public class Exception401 extends RuntimeException {
    public Exception401(String message) {
        super(message);
    }
}
